[package]
name = "cordy"
version = "0.1.1"
edition = "2021"

[lib]
name = "cordy"
crate-type = ["cdylib"]
path = "src/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ctor = "0.1"
tracing = "0.1"
pox = { git = "ssh://git@git.fantabos.co/srv/git/pox", branch = "dev", features = ["monitor"] }
tokio = { version = "1.27", features = ["full"] }
tracing-subscriber = "0.3"
mlua = { version = "0.8", features = ["luajit52", "vendored", "async", "send", "serialize"] }
serde = "1.0.159"
serde_json = "1.0.95"
nix = "0.26.2"
pretty-hex = "0.3"
signal-hook = "0.3.15"
